# python-learning-journey

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  cli.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
module_01_fundamentals/: main.py
module_01_fundamentals/project/: book.py  library.py  user.py
module_01_fundamentals/tests/: test_book.py  test_library.py  test_user.py
module_02_data_analysis/: manual_visual.py  test_visual.py
module_02_data_analysis/data/: sales.csv
module_02_data_analysis/project/: catalogue_analysis.py  visualizer.py
module_02_data_analysis/tests/: test_catalogue_analysis.py  test_visualizer.py
module_03_automation/project/: file_manager.py
module_03_automation/tests/: test_file_manager.py
module_04_web/project/: app.py
module_04_web/tests/: test_app.py
module_05_advanced/project/: context_managers.py  decorators.py  generators.py
module_05_advanced/tests/: test_context_managers.py  test_decorators.py  test_generators.py
