[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "python-learning-journey"
version = "1.0.0"
description = "Library management system built during the Microsoft Python Development Professional Certificate"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Rodrigo Guido"},
]
dependencies = [
    "flask>=3.0",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "click>=8.0",
]

[project.scripts]
plj = "cli:main"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py310"
